# Tito-POS-System

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  setup_postgres.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/: settings.json
.github/workflows/: deploy.yml
public/: splashscreen.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: auth.rs  backup.rs  categories.rs  mod.rs  products.rs  sales.rs  settings.rs  users.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql  001_schema.sql  002_add_permissions.sql  003_add_category_name_unique.sql  004_remove_sample_data.sql  mod.rs  seed_data.sql
src-tauri/src/models/: category.rs  mod.rs  product.rs  sale.rs  settings.rs  user.rs
src-tauri/src/services/: checkout.rs  receipt.rs
src/components/: DemoBanner.tsx
src/components/layout/: AppLayout.tsx  ErrorBoundary.tsx  Sidebar.tsx
src/components/pos/: CartPanel.tsx  CheckoutModal.tsx  ProductGrid.tsx  ReceiptPreview.tsx
src/components/settings/: BackupSettings.tsx
src/context/: AuthContext.tsx  CartContext.tsx  ToastContext.tsx
src/data/: mockData.ts
src/hooks/: useCheckout.ts
src/lib/: currency.ts  tauri.ts
src/pages/: AccountsPage.tsx  DashboardPage.tsx  LoginPage.tsx  PosPage.tsx  ProductsPage.tsx  SalesPage.tsx  SettingsPage.tsx
src/types/: index.ts
(+6 files in other folders)
