[package]
name = "shop-pos-system"
version = "0.1.0"
description = "Local desktop POS for educational supplies and sari-sari store items"
authors = ["you"]
edition = "2021"

[lib]
name = "shop_pos_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
bcrypt = "0.15"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
